# IBICF.github.io

./: README.md  README_midpoint.md  index.html
code/IBICF/: CMakeLists.txt
code/IBICF/esp8266/: CMakeLists.txt
code/IBICF/esp8266/pio_rx/: CMakeLists.txt  uart_rx.c
code/IBICF/esp8266/pio_tx/: CMakeLists.txt  uart_tx.c
code/IBICF/esp8266/uart/: CMakeLists.txt  uart.c
code/IBICF/motor/: CMakeLists.txt  pwm.c  pwm_new.c
code/IMU_Part/: CMakeLists.txt  UART_TxRx.h  imu_provider.h  main.cpp  main_functions.cpp
code/cam_tracking/: README.md  main.c
code/working/RP2040/: balancedboard.py
media/materials/design/troubleshooting/: troubleshooting.md
